# LibXDF

./: .gitignore  CMakeLists.txt  LICENSE  README.md  XDFile.cpp  XDFile.h
crossplatform/: XdfStringFormat.h
exceptions/: XdfFileException.cpp  XdfFileException.h
include/: MMAttribute.h  MMElement.h  MMEmbeddedData.h  MMMath.h  MMRegion.h  MMTypes.h  XDFTypes.h  XDFile.h
include/elements/: MMXDFAxis.h  MMXDFChecksum.h  MMXDFConstant.h  MMXDFFunction.h  MMXDFHeader.h  MMXDFPatch.h  MMXDFTable.h
tests/: CMakeLists.txt
tests/src/: main.cpp
types/: MMAttribute.cpp  MMCategory.cpp  MMCategory.h  MMDefaultsElement.cpp  MMDefaultsElement.h  MMElement.cpp  MMElement.h  MMEmbeddedData.cpp  MMMath.cpp  MMMath.h  MMMathElement.cpp  MMMathElement.h  MMRegion.cpp  MMRegion.h  MMTypes.h  MMXDFConstantFlags.h  XDFConstantFlags.h
types/elements/: MMXDFAxis.cpp  MMXDFAxis.h  MMXDFChecksum.cpp  MMXDFChecksum.h  MMXDFConstant.cpp  MMXDFConstant.h  MMXDFFlag.cpp  MMXDFFlag.h  MMXDFFunction.cpp  MMXDFHeader.cpp  MMXDFHeader.h  MMXDFPatch.cpp  MMXDFPatchEntry.cpp  MMXDFPatchEntry.h  MMXDFTable.cpp  XDFRootTag.cpp  XDFRootTag.h
types/include/: XDFTypes.h
